[project]
name = "vs050-mujoco"
version = "0.1.0"
description = "Gymnasium environment for VS050 pick-and-place tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "mujoco>=3.1.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vs050_mujoco"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
