[project]
name = "vs050-mujoco"
version = "0.1.0"
description = "Gymnasium environment for VS050 pick-and-place tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "mujoco>=3.1.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vs050_mujoco"]

[dependency-groups]
dev = [
    "imageio>=2.37.3",
    "pytest>=9.0.2",
]
rl = [
    "gymnasium[other]>=1.2.3",
    "moviepy>=2.2.1",
    "stable-baselines3>=2.3.2",
    "torch>=2.2.0",
]
wandb = [
    "wandb>=0.17.7",
]
